<resources>
    <string name="app_name" translatable="false">Auto Updater for Chromium</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title">Chromium will be updated automatically</string>
    <string name="title_manual">Ready!</string>
    <string name="intro">You can hide this app if you want</string>
    <string name="intro_manual">Press \"Update now\" to update Chromium</string>
    <string name="needHelp">Need help?</string>
    <string name="needHelp_url" translatable="false">http://fdossena.com/?p=chromium/help.frag</string>
    <string name="updateNow">Update now</string>
    <string name="updateNow_clicked">The update will start soon</string>
    <string name="version">Version 1.8.3</string>
    <string name="noroot_title">Chromium will be updated automatically ...sort of</string>
    <string name="noroot_text">Updates will be downloaded automatically but will have to be installed manually because this device is not rooted. You can find instructions online on how to root your device. This is not an application error.</string>

    <string name="notification_title">Updating Chromium</string>
    <string name="notification_starting">Starting download</string>
    <string name="notification_downloading">Downloading update</string>
    <string name="notification_installing">Installing update</string>
    <string name="notification_noroot_ready">Chromium update available</string>
    <string name="notification_noroot_ready_text">Tap to install</string>
    <string name="notification_cancel">CANCEL</string>

    <string name="autoSwitch">Update Chromium automatically</string>
    <string name="forceUpdate">Update now</string>
    <string name="updateEvery_title">Update frequency (days)</string>
    <string name="avoidMobile_title">Avoid mobile connections</string>
    <string name="hide_title">Hide app from menu</string>
    <string name="hide_desc">Reinstall the app to see it again</string>
    <string name="hide_clicked">The app will disappear soon</string>
    <string name="github_title">See project on Github</string>
    <string name="github_desc">Report bugs or contribute</string>
    <string name="github" translatable="false">https://github.com/adolfintel/chromiumUpdater</string>
    <string name="advanced_title">Advanced settings</string>
    <string name="installMethod">Install method</string>
    <string name="installMethod_auto">Auto</string>
    <string name="installMethod_root">pm (Silent, root required)</string>
    <string name="installMethod_noroot">Intent (Manual, no root required)</string>
    <string name="installMethodValue_auto" translatable="false">auto</string>
    <string name="installMethodValue_root" translatable="false">root</string>
    <string name="installMethodValue_noroot" translatable="false">noroot</string>
    <string name="channel">Channel</string>
    <string name="channel_stable">Stable</string>
    <string name="channel_latest">Latest</string>
    <string name="channelValue_stable" translatable="false">stable</string>
    <string name="channelValue_latest" translatable="false">latest</string>
    <string name="notifyErrors">Notify internal errors</string>
    <string name="notifyErrors_desc">Useful if something keeps failing</string>
    <string name="notifyDone">Notify after updating</string>
    <string name="notifyDone_desc">Show a notification after a successful update</string>
    <string name="notifyDone_notification">Chromium was updated successfully</string>
    <string name="notEnoughSpace">Not enough space to update</string>

    <string name="error">Error</string>
    <string name="error_report">Report</string>

    <string name="title_activity_enable_non_market_apps">Allow Third party Apps</string>
    <string name="notpapps_title">Please allow Third party apps to be installed</string>
    <string name="notpapps_text">Click this button and allow installation of apps from unknown sources.</string>
    <string name="notpapps_button">Security settings</string>

    <string name="alreadyInstalled_title">Third party Chromium detected</string>
    <string name="alreadyInstalled_text">You have installed Chromium from another source. This app may not work properly unless you uninstall this version first.</string>
    <string name="alreadyInstalled_button1">Uninstall</string>
    <string name="alreadyInstalled_button2">Ignore</string>

    <string name="title_activity_intro">Introduction</string>
    <string name="intro_title">Welcome</string>
    <string name="intro_text">This app will download Chromium and keep it updated for you.</string>
    <string name="intro_swipeToContinue">Swipe to continue</string>
    <string name="intro_title2">What is Chromium?</string>
    <string name="intro_text2">Chromium is the project at the base of Google Chrome. It\'s basically the Open Source version of Chrome.</string>
    <string name="intro_title3">Problems? Check the help</string>
    <string name="intro_text3">This app downloads the very latest version of Chromium from Google, so you may encounter bugs.</string>
    <string name="intro_text3b">These problems are completely unrelated to this app, but if you encounter them, check the help to see what you can do</string>
    <string name="intro_title4">You\'re ready to go!</string>
    <string name="intro_text4">Just a reminder: this app is not in any way affiliated with Google or the Chromium project.</string>
    <string name="intro_endButton">Enable Updater</string>
    <string name="notEnoughSpace_retry">We\'ll try again later</string>
</resources>
