<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="autoSwitch"
        android:title="@string/autoSwitch"
        android:defaultValue="true"
        />

    <EditTextPreference
        android:key="updateEvery"
        android:title="@string/updateEvery_title"
        android:inputType="number"
        android:defaultValue="7"
    />

    <Preference
        android:key="forceUpdate"
        android:title="@string/forceUpdate"
        />

    <CheckBoxPreference
        android:key="noMobileConnections"
        android:title="@string/avoidMobile_title"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="notifyDone"
        android:title="@string/notifyDone"
        android:summary="@string/notifyDone_desc"
        android:defaultValue="false"
        />

    <Preference
        android:key="hideApp"
        android:title="@string/hide_title"
        android:summary="@string/hide_desc"
        />

    <Preference
        android:key="advancedSettings"
        android:title="@string/advanced_title"
        />

    <Preference
        android:key="github"
        android:title="@string/github_title"
        android:summary="@string/github_desc"
        />



</PreferenceScreen>
