<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="installMethod"
        android:title="@string/installMethod"
        android:entries="@array/installMethods"
        android:entryValues="@array/installMethodsValues"
        android:defaultValue="auto"
        />

    <ListPreference
        android:key="channel"
        android:title="@string/channel"
        android:entries="@array/channels"
        android:entryValues="@array/channelValues"
        android:defaultValue="@string/channelValue_latest"
        />

    <CheckBoxPreference
        android:key="notifyErrors"
        android:title="@string/notifyErrors"
        android:summary="@string/notifyErrors_desc"
        android:defaultValue="false"
        />

</PreferenceScreen>
